--- a/style.css
+++ b/style.css
@@ -3,3 +3,22 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --light-bg-color: #111;
+  --dark-bg-color: #000;
+  --light-text-color: #f0f0f0;
+  --heading-color: #fff;
+  --text-color: #c4c4c4;
+  font-size: 10px;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* 
+
+  font-family: monospace;
+
+*/
