--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ main {
 
 .main-btns-left ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
@@ -175,4 +176,55 @@ main {
   height: 50vh;
   background: black;
   color: white;
+}
+
+/* projects section */
+
+.projects-section {
+  padding: var(--common-padding);
+  background-color: var(--light-bg-color);
+  color: var(--light-text-color);
+}
+
+.projects-section h2 {
+  padding: 10vh 0;
+}
+
+.projects-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 33.33%);
+  /* grid-auto-rows: 60vh; */
+  gap: 2rem;
+}
+
+.project {
+  /* background-color: #12bcfe; */
+  /* height: 60vh; */
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  font-size: 1.2rem;
+}
+
+.project img {
+  border-radius: 1rem;
+}
+
+.project-title {
+  font-size: 2rem;
+}
+
+/* @media (width <= 640px){} */
+
+@media (max-width: 1024px) {
+  .projects-wrapper {
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+
+@media (max-width: 768px) {
+  .projects-wrapper {
+    grid-template-columns: repeat(1, 100%);
+  }
 }
