--- a/style.css
+++ b/style.css
@@ -224,6 +224,9 @@ main {
 }
 
 @media (max-width: 768px) {
+  :root {
+    --common-padding: 0 4vw;
+  }
   .projects-wrapper {
     grid-template-columns: repeat(1, 100%);
   }
